Cambio de Instagram y WSP

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         </p>
         <div class="flex flex-wrap gap-3">
             <a
-            href="https://wa.me/549XXXXXXXXXX?text=Hola%2C%20vengo%20desde%20la%20web%20y%20quiero%20info%20sobre%20iPhones"
+            href="https://wa.me/5492364373183?text=Hola%2C%20vengo%20desde%20la%20web%20y%20quiero%20info%20sobre%20iPhones"
             target="_blank"
             rel="noopener noreferrer"
             class="rounded-full bg-emerald-600 px-5 py-2 text-xs font-medium text-white hover:bg-emerald-700"
@@ -256,7 +256,7 @@
             Escribir por WhatsApp
             </a>
             <a
-            href="https://instagram.com/tu_cuenta"
+            href="https://instagram.com/lautyvisser"
             target="_blank"
             rel="noopener noreferrer"
             class="rounded-full border border-slate-300 px-5 py-2 text-xs font-medium text-slate-900 hover:border-slate-900"
